first test commit

--- a/test/integration/roles/test_ec2_elb_lb/tasks/main.yml
+++ b/test/integration/roles/test_ec2_elb_lb/tasks/main.yml
@@ -263,7 +263,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("value of region must be one of:")'
+       - 'result.msg.startswith("At least one listener")'
 
 
 # ============================================================
@@ -364,7 +364,7 @@
   assert:
     that:
        - 'result.failed'
-       - '"InvalidClientTokenId" in result.msg'
+       - '"InvalidClientTokenId" in result.exception'
 
 
 # ============================================================
