--- a/test/integration/roles/test_ec2_group/tasks/main.yml
+++ b/test/integration/roles/test_ec2_group/tasks/main.yml
@@ -66,7 +66,7 @@
   ec2_group:
     name='{{ec2_group_name}}'
     description='{{ec2_group_description}}'
-    region='asdf querty 1234'
+    region='not_valid_region'
   register: result
   ignore_errors: true
 
@@ -74,7 +74,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("Region asdf querty 1234 does not seem to be available for aws module boto.ec2. If the region definitely exists, you may need to upgrade boto or extend with endpoints_path")'
+       - '"Region not_valid_region" in result.msg'
 
 # ============================================================
 - name: test valid region parameter
@@ -89,7 +89,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("No handler was ready to authenticate.")'
+       - '"Unable to locate credentials" in result.msg'
 
 # ============================================================
 - name: test environment variable EC2_REGION
@@ -105,7 +105,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("No handler was ready to authenticate.")'
+       - '"Unable to locate credentials" in result.msg'
 
 # ============================================================
 - name: test invalid ec2_url parameter
@@ -121,7 +121,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("No handler was ready to authenticate.")'
+       - 'result.msg.startswith("The AWS region must be specified as an environment variable or in the AWS credentials profile")'
 
 # ============================================================
 - name: test valid ec2_url parameter
@@ -137,7 +137,7 @@
   assert:
     that:
        - 'result.failed'
-       - 'result.msg.startswith("No handler was ready to authenticate.")'
+       - 'result.msg.startswith("The AWS region must be specified as an environment variable or in the AWS credentials profile")'
 
 # ============================================================
 - name: test credentials from environment
@@ -155,7 +155,7 @@
   assert:
     that:
        - 'result.failed'
-       - '"Error in get_all_security_groups: AWS was not able to validate the provided access credentials" in result.msg'
+       - '"validate the provided access credentials" in result.msg'
 
 # ============================================================
 - name: test credential parameters
@@ -172,7 +172,7 @@
   assert:
     that:
        - 'result.failed'
-       - '"Error in get_all_security_groups: AWS was not able to validate the provided access credentials" in result.msg'
+       - '"validate the provided access credentials" in result.msg'
 
 # ============================================================
 - name: test state=absent
@@ -241,6 +241,145 @@
     that:
        - 'not result.changed'
        - 'result.group_id.startswith("sg-")'
+# ============================================================
+- name: test state=present for ipv6 (expected changed=true)
+  ec2_group:
+    name: '{{ec2_group_name}}'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+    rules:
+    - proto: "tcp"
+      from_port: 8182
+      to_port: 8182
+      cidr_ip: "2001:558:1400::/40"
+  register: result
+
+- debug:
+    msg: "{{result}}"
+
+- name: assert state=present (expected changed=true)
+  assert:
+    that:
+       - 'result.changed'
+       - 'result.group_id.startswith("sg-")'
+
+# ============================================================
+- name: test rules_egress state=present for ipv6 (expected changed=true)
+  ec2_group:
+    name: '{{ec2_group_name}}'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+    rules:
+    - proto: "tcp"
+      from_port: 8182
+      to_port: 8182
+      cidr_ip: "2001:558:1400::/40"
+    rules_egress:
+    - proto: "tcp"
+      from_port: 8181
+      to_port: 8181
+      cidr_ip: "2001:558:1400::/40"
+  register: result
+
+- debug:
+    msg: "{{result}}"
+
+- name: assert state=present (expected changed=true)
+  assert:
+    that:
+       - 'result.changed'
+       - 'result.group_id.startswith("sg-")'
+
+# ============================================================
+- name: test state=present for ipv4 (expected changed=true)
+  ec2_group:
+    name: '{{ec2_group_name}}'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+    rules:
+    - proto: "tcp"
+      from_port: 8182
+      to_port: 8182
+      cidr_ip: "1.1.1.1/32"
+  register: result
+
+- debug:
+    msg: "{{result}}"
+
+- name: assert state=present (expected changed=true)
+  assert:
+    that:
+    - 'result.changed'
+    - 'result.group_id.startswith("sg-")'
+
+# ============================================================
+- name: add same rule to the existing group  (expected changed=false)
+  ec2_group:
+    name: '{{ec2_group_name}}'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+    rules:
+    - proto: "tcp"
+      from_port: 8182
+      to_port: 8182
+      cidr_ip: "1.1.1.1/32"
+  register: result
+
+- debug:
+    msg: "{{result}}"
+
+- name: assert state=present (expected changed=false)
+  assert:
+    that:
+      - 'not result.changed'
+      - 'result.group_id.startswith("sg-")'
+
+# ============================================================
+- name: create a test group
+  ec2_group:
+    name: '{{ec2_group_name}}_test'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+  register: groupinfo
+
+- name: test state=present for ipv4 (expected changed=true)
+  ec2_group:
+    name: '{{ec2_group_name}}'
+    description: '{{ec2_group_description}}'
+    ec2_region: '{{ec2_region}}'
+    ec2_access_key: '{{ec2_access_key}}'
+    ec2_secret_key: '{{ec2_secret_key}}'
+    state: present
+    rules:
+    - proto: "tcp"
+      from_port: 8182
+      to_port: 8182
+      group_id: "{{groupinfo.group_id}}"
+  register: result
+
+- debug:
+    msg: "{{result}}"
+
+- name: assert state=present (expected changed=true)
+  assert:
+    that:
+    - 'result.changed'
+    - 'result.group_id.startswith("sg-")'
 
 # ============================================================
 - name: test state=absent (expected changed=true)
@@ -270,8 +409,21 @@
     EC2_SECRET_KEY: '{{ec2_secret_key}}'
   register: result
 
+- debug:
+    msg: "{{result}}"
+
 - name: assert state=absent (expected changed=false)
   assert:
     that:
        - 'not result.changed'
        - 'not result.group_id'
+
+- name: delete test group state=absent (expected changed=true)
+  ec2_group:
+    name='{{ec2_group_name}}_test'
+    state=absent
+  environment:
+    EC2_REGION: '{{ec2_region}}'
+    EC2_ACCESS_KEY: '{{ec2_access_key}}'
+    EC2_SECRET_KEY: '{{ec2_secret_key}}'
+  register: result
